--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <!--Use downloaded bootstrap 5.1.3 -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="bootstrap.min.css" rel="stylesheet"> -->
     <link href="https://db.onlinewebfonts.com/c/242a828d266472665bf6ad46819772eb?family=STXingkai" rel="stylesheet">
-    <script src="bootstrap.bundle.min.js"></script>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <script src="bootstrap.bundle.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,6 +38,9 @@
             <a href="#home">Chen Wang</a>
         </div>
         <!-- ??? why the order is reversed -->
+        <div class="ftsubheader">
+            <a href="./posts.html">Posts</a>
+        </div>
         <div class="ftsubheader">
             <a href="#awards">Awards</a>
         </div>
@@ -107,7 +110,8 @@
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid">
+                        <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid mx-auto rounded"
+                            style="max-height: 140px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         <!-- Paper Title -->
@@ -120,7 +124,8 @@
 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor" class="img-fluid">
+                        <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor" class="img-fluid mx-auto"
+                            style="max-height: 150px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         <!-- Paper Title -->
