--- a/posts.html
+++ b/posts.html
@@ -28,7 +28,7 @@
                 <div class=item>
                     <div class=date>May 24, 2024</div>
                     <div class=posttitle>
-                        <a href="posts/20240524-test.html" />Hello World!!</a>
+                        <a href="posts/20240524.html" />First Year Ph.D. Life at Penn</a>
                     </div>
                 </div>
             </div>
