--- a/index.html
+++ b/index.html
@@ -110,6 +110,21 @@
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
+                        <img src="data/paper_thumbnail/geco.png" alt="boot" class="img-fluid mx-auto rounded"
+                            style="max-height: 140px; display: block;">
+                    </div>
+                    <div class="col-md-8 paper-info">
+                        <!-- Paper Title -->
+                        GECO: Generative Image-to-3D within a SECOnd
+                        <p class="text-muted"><u>Chen Wang</u>, Jiatao Gu, Xiaoxiao Long, Yuan Liu, Lingjie Liu</p>
+                        <p><em>Arxiv, 2024</em></p>
+                        <p><a href="https://arxiv.org/abs/2405.20327">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://cwchenwang.github.io/geco/">Project Page</a></p>
+                    </div>
+                </div>
+
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid mx-auto rounded"
                             style="max-height: 140px; display: block;">
                     </div>
