--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <ul>
                         <li>&#x2022;&nbsp (04/2024) We have created an <a
                                 href="https://github.com/cwchenwang/awesome-4d-generation">awesome list of papers on 4D
-                                generation</a></li>
+                                generation.</a></li>
                         <li>&#x2022;&nbsp (01/2024) Check out my <a
                                 href="https://github.com/cwchenwang/awesome-3d-diffusion">GitHub Repo</a> on a list of
                             papers on "Diffusion Models for
@@ -126,7 +126,7 @@
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid mx-auto rounded"
-                            style="max-height: 140px; display: block;">
+                            style="max-height: 160px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         <!-- Paper Title -->
@@ -202,7 +202,7 @@
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/deepportraitdrawing.png" alt="deepportraitdrawing"
-                            class="img-fluid">
+                            class="img-fluid" style="max-height: 160px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches
@@ -213,7 +213,7 @@
 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <video width="100%" height="auto" autoplay loop muted controls>
+                        <video width="70%" height="auto" autoplay loop muted controls class="mx-auto d-block">
                             <source src="data/paper_thumbnail/nerf-sr.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -230,7 +230,8 @@
 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/rotation-gains.png" alt="rotation-gains" class="img-fluid">
+                        <img src="data/paper_thumbnail/rotation-gains.png" alt="rotation-gains"
+                            class="img-fluid mx-auto" style="max-height: 180px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR
