--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/geco.png" alt="boot" class="img-fluid mx-auto rounded"
-                            style="max-height: 140px; display: block;">
+                        <img src="data/paper_thumbnail/geco.png" alt="geco" class="img-fluid mx-auto rounded"
+                            style="width: 250px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         <!-- Paper Title -->
@@ -126,7 +126,7 @@
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid mx-auto rounded"
-                            style="max-height: 160px; display: block;">
+                            style="width: 80%; height: 130px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         <!-- Paper Title -->
@@ -134,13 +134,16 @@
                         <p class="text-muted">Jiatao Gu, <u>Chen Wang</u>, Shuangfei Zhai, Yizhe Zhang, Lingjie Liu,
                             Josh Susskind</p>
                         <p><em>International Conference on Machine Learning, 2024</em></p>
+                        <p><a
+                                href="https://openreview.net/pdf/91ce5baf1cb9a852eaf8a1706470b91358790b4a.pdf">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://machinelearning.apple.com/research/boot">Project Page</a>
                     </div>
                 </div>
 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor" class="img-fluid mx-auto"
-                            style="max-height: 150px; display: block;">
+                            style="width: 80%; height: 130px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         <!-- Paper Title -->
@@ -156,7 +159,7 @@
 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <video width="100%" height="auto" autoplay loop muted controls>
+                        <video width="80%" height="100%" autoplay loop muted controls>
                             <source src="data/paper_thumbnail/vmesh.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -173,7 +176,7 @@
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/outdoor-nerf-depth.png" alt="outdoor-nerf-depth"
-                            class="img-fluid">
+                            class="img-fluid mx-auto rounded" style="width: 80%; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         Digging into Depth Priors for Outdoor Neural Radiance Fields
@@ -190,7 +193,8 @@
 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/structnerf.png" alt="structnerf" class="img-fluid">
+                        <img src="data/paper_thumbnail/structnerf.png" alt="structnerf"
+                            class="img-fluid mx-auto rounded" style="width: 80%; height: 120px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints
@@ -202,7 +206,7 @@
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/deepportraitdrawing.png" alt="deepportraitdrawing"
-                            class="img-fluid" style="max-height: 160px; display: block;">
+                            class="img-fluid mx-auto rounded" style="width: 80%; height: 130px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches
@@ -231,7 +235,7 @@
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/rotation-gains.png" alt="rotation-gains"
-                            class="img-fluid mx-auto" style="max-height: 180px; display: block;">
+                            class="img-fluid mx-auto" style="width: 80%; max-height: 130px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR
