--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                         <p class="text-muted"><u>Chen Wang</u>, Jiatao Gu, Xiaoxiao Long, Yuan Liu, Lingjie Liu</p>
                         <p><em>Arxiv, 2024</em></p>
                         <p><a href="https://arxiv.org/abs/2405.20327">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://cwchenwang.github.io/geco/">Project Page</a></p>
+                                href="https://cwchenwang.github.io/geco/">Project Page</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/cwchenwang/geco">Code</a></p>
                     </div>
                 </div>
 
