--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                 </h1>
                 <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
                     where I have the pleasure to work with <a href="https://lingjie0206.github.io/">Prof.
-                        Lingjie Liu</a>. I am affiliated with the Graphics Lab and GRASP lab. I am also a member
-                    of
-                    <a href="https://anysyn3d.github.io/">AnySyn3D</a> research group. My
+                        Lingjie Liu</a>. I am affiliated with the Graphics Lab and GRASP lab. My
                     research interests are computer graphics and computer vision, with a focus on 3D/4D generative
                     models
                     and neural 3D representaions.
@@ -76,6 +74,9 @@
                 </p>
                 <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
                         what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
+                <p style="color: red;">I am actively looking for an internship in Summer 2025. Please contact
+                    me if you find we are a
+                    good fit.</p>
                 <div class="links text-center">
                     <a href="mailto:cw.chenwang@outlook.com">Email</a>
                     <a href="data/CV_en.pdf">CV</a>
@@ -98,7 +99,7 @@
                                 href="https://github.com/cwchenwang/awesome-3d-diffusion">GitHub Repo</a> on a list of
                             papers on "Diffusion Models for
                             3D
-                            Generation".
+                            Generation" and <a href="data/survey.pdf">the survey paper</a>.
                         </li>
                     </ul>
                 </div>
@@ -257,7 +258,10 @@
                 <p class="section-name">Services</p>
                 <div class="exp-list">
                     <ul>
-                        <li>Reviewer: CVPR, ECCV, ICLR, MM, PG, WACV
+                        <li>Conference Reviewer: CVPR, ICCV, ECCV, ICLR, NeurIPS, SIGGRAPH Asia, AAAI, ACMMM, 3DV, WACV,
+                            PG
+                        </li>
+                        <li>Journal Reviewer: PAMI, TVCG, TIP
                         </li>
                     </ul>
                 </div>
