--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 </p>
                 <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
                         what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
-                <p style="color: red;">I am actively looking for an internship in Summer 2025. Please contact
-                    me if you find we are a
-                    good fit.</p>
+                <p style="color: red;"><b>I am actively looking for an internship in Summer 2025. Please contact
+                        me if you find we are a
+                        good fit.</b></p>
                 <div class="links text-center">
                     <a href="mailto:cw.chenwang@outlook.com">Email</a>
                     <a href="data/CV_en.pdf">CV</a>
@@ -110,6 +110,22 @@
             <div class="col-12">
                 <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-4 paper-thumbnail">
+                        <img src="data/paper_thumbnail/zero12g.png" alt="boot" class="img-fluid mx-auto rounded"
+                            style="width: 80%; height: 130px; display: block;">
+                    </div>
+                    <div class="col-md-8 paper-info">
+                        <!-- Paper Title -->
+                        Zero-1-to-G: Taming Pretrained 2D Diffusion Model for Direct 3D Generation
+                        <p class="text-muted">Xuyi Meng*, <u>Chen Wang*</u>, Jiahui Lei, Kostas Daniilidis, Jiatao Gu,
+                            Lingjie Liu</p>
+                        <p><em>Arxiv, 2024</em></p>
+                        <p><a
+                                href="https://mengxuyigit.github.io/images/zero1toG/ICLR_2025_Zero_1_to_G.pdf">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://mengxuyigit.github.io/projects/zero-1-to-G/">Project Page</a></p>
+                    </div>
+                </div>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4"><model-viewer tone-mapping="neutral"
                             src="data/paper_thumbnail/animal_character.glb" style="width: 100%;"
