--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
                     and neural 3D representaions.
                 </p>
                 <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
-                    Shi-Min Hu
-                    and Prof. Song-Hai Zhang.
+                    <a href="https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min Hu</a>
+                    and <a href="https://scholar.google.com/citations?user=AWtV-EQAAAAJ&hl=en&oi=ao">Prof. Song-Hai
+                        Zhang</a>.
                 </p>
                 <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
                         what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
-                <p style="color: red;"><b>I am actively looking for an internship in Summer 2025. Please contact
-                        me if you find we are a
+                <p style="color: red;"><b>I am looking for an internship in Summer 2025. Please drop me an email if you
+                        find we are a
                         good fit.</b></p>
                 <div class="links text-center">
                     <a href="mailto:cw.chenwang@outlook.com">Email</a>
@@ -111,16 +112,16 @@
                 <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/zero12g.png" alt="boot" class="img-fluid mx-auto rounded"
                             style="width: 80%; height: 130px; display: block;">
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
                         Zero-1-to-G: Taming Pretrained 2D Diffusion Model for Direct 3D Generation
                         <p class="text-muted">Xuyi Meng*, <u>Chen Wang*</u>, Jiahui Lei, Kostas Daniilidis, Jiatao Gu,
                             Lingjie Liu</p>
-                        <p><em>Arxiv, 2024</em></p>
+                        <p>Arxiv, 2024</p>
                         <p><a
                                 href="https://mengxuyigit.github.io/images/zero1toG/ICLR_2025_Zero_1_to_G.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://mengxuyigit.github.io/projects/zero-1-to-G/">Project Page</a></p>
@@ -131,11 +132,11 @@
                             src="data/paper_thumbnail/animal_character.glb" style="width: 100%;"
                             orientation="0deg 0deg 180deg" shadow-intensity="1" camera-controls="" touch-action="pan-y"
                             ar-status="not-presenting"></model-viewer></div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
                         GECO🦎: Generative Image-to-3D within a SECOnd
                         <p class="text-muted"><u>Chen Wang</u>, Jiatao Gu, Xiaoxiao Long, Yuan Liu, Lingjie Liu</p>
-                        <p><em>Arxiv, 2024</em></p>
+                        <p>Arxiv, 2024</p>
                         <p><a href="https://arxiv.org/abs/2405.20327">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/geco/">Project Page</a>&nbsp;|&nbsp;<a
                                 href="https://github.com/cwchenwang/geco">Code</a></p>
@@ -143,16 +144,16 @@
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid mx-auto rounded"
                             style="width: 80%; height: 130px; display: block;">
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
                         Data-free Distillation of Denoising Diffusion Models with Bootstrapping
                         <p class="text-muted">Jiatao Gu, <u>Chen Wang</u>, Shuangfei Zhai, Yizhe Zhang, Lingjie Liu,
                             Josh Susskind</p>
-                        <p><em>International Conference on Machine Learning, 2024</em></p>
+                        <p>International Conference on Machine Learning, 2024</p>
                         <p><a
                                 href="https://openreview.net/pdf/91ce5baf1cb9a852eaf8a1706470b91358790b4a.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://machinelearning.apple.com/research/boot">Project Page</a>
@@ -160,16 +161,16 @@
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor" class="img-fluid mx-auto"
                             style="width: 80%; height: 130px; display: block;">
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
                         DreamEditor: Text-Driven 3D Scene Editing with Neural Fields
                         <p class="text-muted">Jingyu Zhuang*, <u>Chen Wang*</u>, Liang Lin,
                             Lingjie Liu, Guanbin Li</p>
-                        <p><em>SIGGRAPH Asia Conference Papers, 2023</em></p>
+                        <p>SIGGRAPH Asia Conference Papers, 2023</p>
                         <p><a href="https://arxiv.org/abs/2306.13455">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://zjy526223908.github.io/DreamEditor/">Project Page</a>&nbsp;|&nbsp;<a
                                 href="https://github.com/zjy526223908/DreamEditor">Code</a></p>
@@ -177,33 +178,33 @@
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <video width="80%" height="100%" autoplay loop muted controls>
                             <source src="data/paper_thumbnail/vmesh.mp4" type="video/mp4">
                         </video>
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis
                         <p class="text-muted">Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>,
                             Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang</p>
-                        <p><em>SIGGRAPH Asia Conference Papers, 2023</em></p>
+                        <p>SIGGRAPH Asia Conference Papers, 2023</p>
                         <a href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
                             href="https://bennyguo.github.io/vmesh/">Project Page</a>
                     </div>
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/outdoor-nerf-depth.png" alt="outdoor-nerf-depth"
                             class="img-fluid mx-auto rounded" style="width: 80%; display: block;">
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         Digging into Depth Priors for Outdoor Neural Radiance Fields
                         <p class="text-muted"><u>Chen Wang</u>, Jiadai Sun, Lina Liu, Chenming Wu, Zhelun Shen,
                             Dayan
                             Wu, Yuchao Dai,
                             Liangjun Zhang</p>
-                        <p><em>ACM International Conference on Multimedia (Oral), 2023</em></p>
+                        <p>ACM International Conference on Multimedia (Oral), 2023</p>
                         <a
                             href="https://cwchenwang.github.io/outdoor-nerf-depth/data/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
                             href="https://cwchenwang.github.io/outdoor-nerf-depth">Project Page</a>&nbsp;|&nbsp;<a
@@ -212,37 +213,37 @@
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/structnerf.png" alt="structnerf"
                             class="img-fluid mx-auto rounded" style="width: 80%; height: 120px; display: block;">
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints
                         <p class="text-muted">Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</p>
-                        <p><em>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023</em></p>
+                        <p>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023</p>
                     </div>
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/deepportraitdrawing.png" alt="deepportraitdrawing"
                             class="img-fluid mx-auto rounded" style="width: 80%; height: 130px; display: block;">
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches
                         <p class="text-muted"><u>Chen Wang*</u>, Xian Wu*, Hongbo Fu, Ariel Shamir, Song-Hai Zhang
                         </p>
-                        <p><em>Computer & Graphics (CAD/Graphics Oral), 2023</em></p>
+                        <p>Computer & Graphics (CAD/Graphics Oral), 2023</p>
                     </div>
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <video width="70%" height="auto" autoplay loop muted controls class="mx-auto d-block">
                             <source src="data/paper_thumbnail/nerf-sr.mp4" type="video/mp4">
                         </video>
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling
                         <p class="text-muted"><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai,
                             Shi-Min Hu</p>
@@ -254,17 +255,17 @@
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 paper-thumbnail">
+                    <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/rotation-gains.png" alt="rotation-gains"
                             class="img-fluid mx-auto" style="width: 80%; max-height: 130px; display: block;">
                     </div>
-                    <div class="col-md-8 paper-info">
+                    <div class="col-md-8 paper-info-v1">
                         On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR
                         <p class="text-muted"><u>Chen Wang</u>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie Zollmann,
                             Shi-Min
                             Hu</p>
-                        <p><em>IEEE Transactions on Visualization and Computer Graphics,
-                                2022</em></p>
+                        <p>IEEE Transactions on Visualization and Computer Graphics,
+                            2022</p>
                     </div>
                 </div>
             </div>
