--- a/index.html
+++ b/index.html
@@ -75,9 +75,6 @@
                 </p>
                 <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
                         what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
-                <p style="color: red;"><b>I am looking for an internship in Summer 2025. Please drop me an email if you
-                        find we are a
-                        good fit.</b></p>
                 <div class="links text-center">
                     <a href="mailto:cw.chenwang@outlook.com">Email</a>
                     <a href="data/CV_en.pdf">CV</a>
@@ -112,6 +109,24 @@
                 <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="row justify-content-center pub-item">
+                    <div class="col-md-4">
+                        <video width="80%" height="auto" autoplay loop muted controls class="mx-auto d-block">
+                            <source src="data/paper_thumbnail/protracker.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="col-md-8 paper-info-v1">
+                        <!-- Paper Title -->
+                        ProTracker: Probabilistic Integration for Robust and Accurate Point Tracking
+                        <p class="text-muted">Tingyang Zhang, <u>Chen Wang</u>, Zhiyang Dou, Qingzhe Gao, Jiahui Lei,
+                            Baoquan
+                            Chen, Lingjie Liu</p>
+                        <p>Arxiv, 2025</p>
+                        <p><a href="https://arxiv.org/abs/2501.03220">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://michaelszj.github.io/protracker/">Project Page</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/Michaelszj/pro-tracker">Code</a></p>
+                    </div>
+                </div>
+                <div class="row justify-content-center pub-item">
                     <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/zero12g.png" alt="boot" class="img-fluid mx-auto rounded"
                             style="width: 80%; height: 130px; display: block;">
@@ -121,9 +136,8 @@
                         Zero-1-to-G: Taming Pretrained 2D Diffusion Model for Direct 3D Generation
                         <p class="text-muted">Xuyi Meng*, <u>Chen Wang*</u>, Jiahui Lei, Kostas Daniilidis, Jiatao Gu,
                             Lingjie Liu</p>
-                        <p>Arxiv, 2024</p>
-                        <p><a
-                                href="https://mengxuyigit.github.io/images/zero1toG/ICLR_2025_Zero_1_to_G.pdf">Paper</a>&nbsp;|&nbsp;<a
+                        <p>Arxiv, 2025</p>
+                        <p><a href="https://arxiv.org/pdf/2501.05427">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://mengxuyigit.github.io/projects/zero-1-to-G/">Project Page</a></p>
                     </div>
                 </div>
