--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
                         Lingjie Liu</a>. I am affiliated with the Graphics Lab and GRASP lab. My
                     research interests are computer graphics and computer vision, with a focus on 3D/4D generative
                     models
-                    and neural 3D representaions.
+                    and neural 3D representaions. My research is partly supported by <a
+                        href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI Felloship</a>.
                 </p>
                 <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
-                    <a href="https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min Hu</a>
+                    <a href=" https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min Hu</a>
                     and <a href="https://scholar.google.com/citations?user=AWtV-EQAAAAJ&hl=en&oi=ao">Prof. Song-Hai
                         Zhang</a>.
                 </p>
@@ -303,6 +304,8 @@
                 <p class="section-name">Honors and Awards</p>
                 <div class="exp-list">
                     <ul>
+                        <li>2025 Meshy AI Fellowship
+                        </li>
                         <li>2022 National Scholarship
                         </li>
                         <li>2022 Siebel Scholarship</li>
