--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     research interests are computer graphics and computer vision, with a focus on 3D/4D generative
                     models
                     and neural 3D representaions. My research is partly supported by <a
-                        href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI Felloship</a>.
+                        href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI Fellowship</a>.
                 </p>
                 <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
                     <a href=" https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min Hu</a>
