--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="links1 col-9">
                 <h1 class="text-center">Chen Wang&nbsp&nbsp<span style="font-family: STXingkai;">王琛</span>
                 </h1>
-                <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
+                <p>I am a CIS PhD student (Fall 2023 - Now) at the University of Pennsylvania,
                     where I have the pleasure to work with <a href="https://lingjie0206.github.io/">Prof.
                         Lingjie Liu</a>. I am affiliated with the Graphics Lab and GRASP lab. My
                     research interests are computer graphics and computer vision, with a focus on 3D/4D generative
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="col-3">
-                <img src="data/pic.JPG" class="avatar img-fluid rounded-circle">
+                <img src="data/pic.png" class="avatar img-fluid rounded-circle">
             </div>
         </div>
         <div class="row justify-content-center" id="news">
@@ -109,6 +109,22 @@
             <div class="col-12">
                 <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-4">
+                        <img src="data/paper_thumbnail/vid2sim.JPG" alt="boot" class="img-fluid mx-auto rounded"
+                            style="width: 80%; height: 110px; display: block;">
+                    </div>
+                    <div class="col-md-8 paper-info-v1">
+                        <!-- Paper Title -->
+                        Vid2Sim: Generalizable, Video-based Reconstruction of Appearance, Geometry and Physics for
+                        Mesh-free Simulation
+                        <p class="text-muted">Chuhao Chen, Zhiyang Dou, <u>Chen Wang</u>, Yiming Huang, Anjun Chen, Qiao
+                            Feng,
+                            Jiatao Gu, Lingjie Liu</p>
+                        <p>CVPR, 2025</p>
+                        <p>Coming Soon</p>
+                    </div>
+                </div>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4">
                         <video width="80%" height="auto" autoplay loop muted controls class="mx-auto d-block">
@@ -320,7 +336,7 @@
             </div>
         </div>
         <footer class="text-center">
-            <p>This website was last updated in Jan, 2024.</p>
+            <p>This website was last updated in Mar, 2025.</p>
             <p>© Copyright 2021 - Present</p>
         </footer>
     </div>
